<resources>
    <string name="app_name">Sel\'s Dice Roller</string>
    <string name="d2">d2</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d12">d12</string>
    <string name="d20">d20</string>
    <string name="d100">d100</string>
    <string name="dF">Fate Dice</string>
    <string name="reset">RESET</string>
    <string name="mod">Modifier</string>
    <string name="roll">Roll</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="defaultDice">1</string>
    <string name="modHint">Modifier, max ±100</string>
    <string name="numOfDice">Number of dice</string>
    <string name="defaultDiceDisp">1d20</string>
    <string name="defaultResultDisp">0</string>
    <string name="welcome"> (BETA BUILD) \nPlease select a feature below.  More may be added in the future!  Feature requests can be sent to me via Discord or Telegram!</string>
    <string name="rollDice">Roll Dice</string>
    <string name="rollStats">Roll Stats</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet.</string>
</resources>
