<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="@color/textPrimary"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/divider"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        style="@style/FeatureStyle"
        android:text="@string/rollDice"
        android:id="@+id/pickDice"
        android:background="@color/colorAccent" />

    <TextView
        style="@style/FeatureStyle"
        android:text="@string/rollStats"
        android:id="@+id/pickStats"
        android:background="@color/colorAccent" />
</LinearLayout>